--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Chinatown_Tour</string>
+    <string name="app_name" translatable="false">Chinatown_Tour</string>
 
     <!-- Main Layout -->
 
@@ -17,44 +17,44 @@
     <string name="hotel1_description">Set at the foot of the Manhattan Bridge in Chinatown, this hip hotel with a midcentury-modern vibe is a 3-minute walk from the Grand Street subway station and an 8-minute walk from the Museum Of Chinese In America.
     Sleek, contemporary rooms offer complimentary Wi-Fi, iPod docks and flat-screen TVs, in addition to Keurig coffeemakers. Upgraded rooms and 1-bedroom suites add bridge or city views.
     Off-site parking is available for a fee.</string>
-    <string name="hotel1_images"> </string>
-    <string name="hotel1_website_link">http://www.leonhotelnyc.com/</string>
-    <string name="hotel1_phone_number"> (212) 390-8833   </string>
+    <string name="hotel1_images" translatable="false"> </string>
+    <string name="hotel1_website_link" translatable="false">http://www.leonhotelnyc.com/</string>
+    <string name="hotel1_phone_number" translatable="false"> (212) 390-8833   </string>
 
     <string name="hotel2_name">Hotel Mimosa</string>
     <string name="hotel2_address">79 Division St, New York, NY 10002</string>
     <string name="hotel2_description">Hotel Mimosa is located in the East Side neighborhood in New York City, just one mile from Ground Zero.All rooms include a flat-screen TV. The rooms have a private bathroom fitted with a bathtub or shower. Extras include free toiletries and a hairdryer. You will find a 24-hour front desk at the property. One World Trade Center is one mile from Hotel Mimosa, and National September 11 Memorial &amp;amp; Museum is 1.1 miles from the property. The nearest airport is LaGuardia Airport, 7 miles from Hotel Mimosa.</string>
-    <string name="hotel2_images"> </string>
-    <string name="hotel2_website_link">https://www.hotelmimosany.com/</string>
-    <string name="hotel2_phone_number">  (212) 343-4243  </string>
+    <string name="hotel2_images" translatable="false"> </string>
+    <string name="hotel2_website_link" translatable="false">https://www.hotelmimosany.com/</string>
+    <string name="hotel2_phone_number" translatable="false">  (212) 343-4243  </string>
 
     <string name="hotel3_name">Wyndham Garden Chinatown</string>
     <string name="hotel3_address">93 Bowery, New York, NY 10002</string>
     <string name="hotel3_description">Relax in beautifully designed guest rooms and suites with contemporary furnishings, private balconies and floor to ceiling windows with stunning views of the city. Savor seasonal American cuisine at the Wu Room. A recipient of the TripAdvisor Certificate of Excellence, our modern Manhattan hotel features intimate event space, complimentary Wi-Fi, and a dynamic ambiance where you can meet, lounge and dine in the beautiful Big Apple. Located in an eclectic Lower Manhattan neighborhood, it\'s easy to explore local nightlife, walk to the trendy shops of SoHo, and dine in Little Italy. </string>
-    <string name="hotel3_images">None</string>
-    <string name="hotel3_website_link">http://www.wyndhamgardenchinatownnyc.com/</string>
-    <string name="hotel3_phone_number"> (646) 329-3400   </string>
+    <string name="hotel3_images" translatable="false">None</string>
+    <string name="hotel3_website_link" translatable="false">http://www.wyndhamgardenchinatownnyc.com/</string>
+    <string name="hotel3_phone_number" translatable="false"> (646) 329-3400   </string>
 
     <string name="hotel4_name">Hotel Mulberry</string>
     <string name="hotel4_address">52 Mulberry St, New York, NY 10013</string>
     <string name="hotel4_description">Overlooking Columbus Park, this contemporary Chinatown hotel is 0.3 miles from Little Italy and a 5-minute walk from the nearest subway station. Casual rooms and suites are decorated in a neutral palette with custom furnishings and offer pillow-top mattresses, flat-screen TVs and minifridges; some include terraces and/or city views. High-speed Internet access is available. Perks include free continental breakfast daily, a business center and a modern lobby with seating areas. Several fine and casual dining options are within a block of the hotel.</string>
-    <string name="hotel4_images">None</string>
-    <string name="hotel4_website_link">http://www.hotelmulberry.com/</string>
-    <string name="hotel4_phone_number"> (212) 385-4633   </string>
+    <string name="hotel4_images" translatable="false">None</string>
+    <string name="hotel4_website_link" translatable="false">http://www.hotelmulberry.com/</string>
+    <string name="hotel4_phone_number" translatable="false"> (212) 385-4633   </string>
 
     <string name="hotel5_name">Hotel 50 Bowery NYC</string>
     <string name="hotel5_address">50 Bowery, New York, NY 10013</string>
-    <string name="hotel5_description">https://www.delivery.com/cities/nyc/categories/restaurant/shanghai-asian-manor?utm_source=google&amp;amp;amp;utm_medium=list&amp;amp;amp;utm_campaign=places_order_now_btn</string>
-    <string name="hotel5_images">None</string>
-    <string name="hotel5_website_link">https://www.jdvhotels.com/hotels/new-york/nyc/hotel-50-bowery-nyc</string>
-    <string name="hotel5_phone_number"> (212) 508-8000   </string>
+    <string name="hotel5_description" translatable="false">Hotel 50 Bowery is located in the Chinatown neighborhood in New York City, just 0.9 miles from Ground Zero. Guests can enjoy the on-site bar. Private parking is available on site.Each room at this hotel is air conditioned and has a flat-screen TV. Certain rooms have a sitting area for your convenience. A terrace or balcony are featured in certain rooms. The rooms have a private bathroom. For your comfort, you will find free toiletries and a hairdryer.You will find a 24-hour front desk at the property. One World Trade Center is 0.9 miles from Hotel 50 Bowery, and National September 11 Memorial &amp; Museum is 0.9 miles away. The nearest airport is LaGuardia Airport, 7 miles from Hotel 50 Bowery.</string>
+    <string name="hotel5_images" translatable="false">None</string>
+    <string name="hotel5_website_link" translatable="false">https://www.jdvhotels.com/hotels/new-york/nyc/hotel-50-bowery-nyc</string>
+    <string name="hotel5_phone_number" translatable="false"> (212) 508-8000   </string>
 
     <string name="hotel6_name">Best Western Bowery Hanbee Hotel</string>
     <string name="hotel6_address">231 Grand St, New York, NY 10013</string>
-    <string name="hotel6_description">https://www.delivery.com/cities/nyc/categories/restaurant/shanghai-asian-manor?utm_source=google&amp;amp;amp;utm_medium=list&amp;amp;amp;utm_campaign=places_order_now_btn</string>
-    <string name="hotel6_images">None</string>
-    <string name="hotel6_website_link">http://www.bw-boweryhanbeehotel.com/</string>
-    <string name="hotel6_phone_number"> (212) 925-1177   </string>
+    <string name="hotel6_description" translatable="false">Located in downtown Manhattan, this hotel is steps from Little Italy and 400 feet from the Grand Street Subway station. It features guest rooms with flat-screen TVs and free Wi-Fi. Every room at the Best Western Bowery Hanbee Hotel provides coffee facilities. Each includes cable TV with in-room movies and a variety of international TV channels. A gym and a business center are available at the hotel. Bowery Hanbee Best Western Hotel also offers laundry facilities and a 24-hour front desk. Bowery Hanbee Hotel is within walking distance of the fabulous shopping of SoHo and the vibrant Chinatown area. Ground Zero is one mile away. </string>
+    <string name="hotel6_images" translatable="false">None</string>
+    <string name="hotel6_website_link" translatable="false">http://www.bw-boweryhanbeehotel.com/</string>
+    <string name="hotel6_phone_number" translatable="false"> (212) 925-1177   </string>
 
     <string name="hotel7_name">Hotel 91</string>
     <string name="hotel7_address">91 E Broadway, New York, NY 10002</string>
