--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -84,4 +84,35 @@
     <string name="canal_street_description">Hay varias vías para llegar a la estación de metro de Canal Street. Es una estación muy grande que consta de muchos trenes incluyendo el N, Q, R, W, Z, J, M, 4, y 6 de tren.</string>
     <string name="east_broadway_description">El único tren que va hasta la East Broadway es la F tren.</string>
     <string name="grand_street_description">Durante la semana que termina el B los trenes no funcionan. Sólo la D trenes paran en esta estación.</string>
+    <string name="activity1_type">Museo</string>
+    <string name="activity2_type">Institución religiosa</string>
+    <string name="activity3_type">Tienda de confitería</string>
+    <string name="activity4_type">Compras</string>
+    <string name="activity5_type">bar</string>
+    <string name="activity6_type">parque</string>
+    <string name="activity7_type">centro comunitario</string>
+    <string name="activity8_type">compras</string>
+    <string name="activity10_type">karaoke bar</string>
+    <string name="activity11_type">spa</string>
+    <string name="activity12_type">excursión a pie</string>
+    <string name="activity12_address">Se reúne en la esquina de las calles Mulberry y Worth</string>
+    <string name="activity13_name">Iglesia de la Transfiguración</string>
+    <string name="activity14_type">desfile</string>
+    <string name="activity14_address">East Houston Street a Canal Street</string>
+    <string name="activity15_address">Mott Street; entre las calles Canal y Beyard</string>
+    <string name="Activity1_shopping_description">Compras</string>
+    <string name="Activity2_shopping_description">Compras</string>
+    <string name="Activity3_shopping_description">Compras</string>
+    <string name="Activity4_shopping_description">Compras</string>
+    <string name="Activity5_shopping_description">Compras</string>
+    <string name="Activity6_shopping_description">Compras</string>
+    <string name="Activity7_shopping_description">Compras</string>
+    <string name="Activity8_shopping_description">Compras</string>
+    <string name="restaurant1_website">Ninguno</string>
+    <string name="restaurant3_website">Ninguno</string>
+    <string name="restaurant4_website">Ninguno</string>
+    <string name="restaurant5_website">Ninguno</string>
+    <string name="fast_food2_website">Ninguno</string>
+    <string name="fast_food3_website">Ninguno</string>
+    <string name="grand_street_trains">B, D</string>
 </resources>
