--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -114,5 +114,5 @@
     <string name="restaurant5_website">Ninguno</string>
     <string name="fast_food2_website">Ninguno</string>
     <string name="fast_food3_website">Ninguno</string>
-    <string name="grand_street_trains">B, D</string>
+    <string name="east_broadway_station">East Broadway</string>
 </resources>
