--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -405,51 +405,51 @@
     <!-- Food Locations and Details -->
     <!-- Restaurants -->
     <string name="restaurant1_name">Shanghai Asian Manor</string>
-    <string name="restaurant1_address">21 Mott St, New York, NY 10013</string>
+    <string name="restaurant1_address" translatable="false">21 Mott St, New York, NY 10013</string>
     <string name="restaurant1_menu" translatable="false">https://www.delivery.com/cities/nyc/categories/restaurant/shanghai-asian-manor?utm_source=google&amp;utm_medium=list&amp;utm_campaign=places_order_now_btn</string>
     <string name="restaurant1_website">None</string>
-    <string name="restaurant1_phone_number">(212)766-6311</string>
+    <string name="restaurant1_phone_number" translatable="false">(212)766-6311</string>
     <string name="restaurant1_description">No-frills place offering a big menu of beyond-the-basics
         Chinese dishes including soup dumplings.</string>
 
     <string name="restaurant2_name">Nom Wah Tea Parlor</string>
-    <string name="restaurant2_address">13 Doyers St, New York, NY 10013 </string>
+    <string name="restaurant2_address" translatable="false">13 Doyers St, New York, NY 10013 </string>
     <string name="restaurant2_menu" translatable="false">http://nomwah.com/chinatown</string>
     <string name="restaurant2_website" translatable="false">http://nomwah.com/chinatown</string>
-    <string name="restaurant2_phone_number">(212) 962-6047</string>
+    <string name="restaurant2_phone_number" translatable="false">(212) 962-6047</string>
     <string name="restaurant2_description">Vintage dim sum parlor dating back to 1920
         with a drink menu that includes tea, beer and wine.</string>
 
     <string name="restaurant3_name">Great NY Noodletown</string>
-    <string name="restaurant3_address">28 Bowery, New York, NY 10013</string>
+    <string name="restaurant3_address" translatable="false">28 Bowery, New York, NY 10013</string>
     <string name="restaurant3_menu" translatable="false">http://places.singleplatform.com/great-ny-noodletown/menu?ref=google</string>
     <string name="restaurant3_website">None</string>
-    <string name="restaurant3_phone_number">(212) 349-0923</string>
+    <string name="restaurant3_phone_number" translatable="false">(212) 349-0923</string>
     <string name="restaurant3_description">Salt-baked seafood, handmade noodles,
         soups and roast meat are served in a spartan setting.</string>
 
     <string name="restaurant4_name">Ping</string>
-    <string name="restaurant4_address">22 Mott St, New York, NY 10013</string>
+    <string name="restaurant4_address" translatable="false">22 Mott St, New York, NY 10013</string>
     <string name="restaurant4_menu" translatable="false">http://places.singleplatform.com/pings/menu?ref=google</string>
     <string name="restaurant4_website">None</string>
-    <string name="restaurant4_phone_number">(212) 602-9988</string>
+    <string name="restaurant4_phone_number" translatable="false">(212) 602-9988</string>
     <string name="restaurant4_description">Fish are plucked from tanks up front at
         this Cantonese seafood spot also known for a dim sum lunch.</string>
 
     <string name="restaurant5_name">Tasty Had-Pulled Noodles</string>
-    <string name="restaurant5_address">1 Doyers St, New York, NY 10013</string>
+    <string name="restaurant5_address" translatable="false">1 Doyers St, New York, NY 10013</string>
     <string name="restaurant5_menu" translatable="false">http://places.singleplatform.com/tasty-hand-pulled-noodles/menu?ref=google</string>
     <string name="restaurant5_website">None</string>
-    <string name="restaurant5_phone_number">(212) 791-1817</string>
+    <string name="restaurant5_phone_number" translatable="false">(212) 791-1817</string>
     <string name="restaurant5_description">Chinese noodles are made by hand and served
         in soups and stir-fries at this bustling, bare-bones spot.</string>
 
     <!-- Fast Food -->
     <string name="fast_food1_name">McDonalds</string>
-    <string name="fast_food1_address">262 Canal St, New York, NY 10013</string>
+    <string name="fast_food1_address" translatable="false">262 Canal St, New York, NY 10013</string>
     <string name="fast_food1_menu" translatable="false">https://www.mcdonalds.com/us/en-us/full-menu.html?cid=RF:YXT_LS:SI::MGBM</string>
     <string name="fast_food1_website" translatable="false">https://www.mcdonalds.com/us/en-us/mobile-order-and-pay.html</string>
-    <string name="fast_food1_phone_number">(212) 941- 5823</string>
+    <string name="fast_food1_phone_number" translatable="false">(212) 941- 5823</string>
     <string name="fast_food1_description">Classic, long-running fast-food chain known for its burgers,
         fries and shakes. </string>
 
@@ -457,20 +457,20 @@
     <string name="fast_food2_address">79 Chrystie St, New York, NY 10002</string>
     <string name="fast_food2_menu" translatable="false">https://www.menuwithprice.com/menu/wah-fung-1-fast-food/</string>
     <string name="fast_food2_website">None</string>
-    <string name="fast_food2_phone_number">(212) 925-5175</string>
+    <string name="fast_food2_phone_number" translatable="false">(212) 925-5175</string>
     <string name="fast_food2_description">An Asian fast food restaurant that has cheap eats
         with lunch specials and can conveniently deliver right to your doorstep</string>
 
     <string name="fast_food3_name">Hua Ji Pork Chop Fast Food</string>
-    <string name="fast_food3_address">7 Allen St, New York 10002</string>
+    <string name="fast_food3_address" translatable="false">7 Allen St, New York 10002</string>
     <string name="fast_food3_menu" translatable="false">http://www.menupages.com/restaurants/hua-ji-pork-chop-fast-food/menu</string>
     <string name="fast_food3_website">None</string>
-    <string name="fast_food3_phone_number">(212) 219-9876</string>
+    <string name="fast_food3_phone_number" translatable="false">(212) 219-9876</string>
     <string name="fast_food3_description">Tiny, modest Chinese counter-serve spot specializing in
         pork chops over rice and quick snacks.</string>
 
     <string name="fast_food4_name">Popeyes Louisiana Kitchen</string>
-    <string name="fast_food4_address">125 Canal St, New York, NY 10002</string>
+    <string name="fast_food4_address" translatable="false">125 Canal St, New York, NY 10002</string>
     <string name="fast_food4_menu" translatable="false">https://popeyes.com/menu/</string>
     <string name="fast_food4_website" translatable="false">https://popeyes.com/</string>
     <string name="fast_food4_phone_number">(212) 966-7077</string>
@@ -478,52 +478,52 @@
         spicy fried chicken, biscuits and sides.</string>
 
     <string name="fast_food5_name">May Wah Fast Food</string>
-    <string name="fast_food5_address">190 Hester St, New York, NY 10013</string>
+    <string name="fast_food5_address" translatable="false">190 Hester St, New York, NY 10013</string>
     <string name="fast_food5_menu" translatable="false">http://www.maywahfastfood.com/menu/</string>
     <string name="fast_food5_website" translatable="false">http://www.maywahfastfood.com/</string>
-    <string name="fast_food5_phone_number">(212) 925-6428</string>
+    <string name="fast_food5_phone_number" translatable="false">(212) 925-6428</string>
     <string name="fast_food5_description">Straight from their website May Wah Fast Food specializes in soups, “over rice” dishes and noodle soups.
         Popular “over rice” dishes include their Chicken Leg Over Rice and Pork Chop Over Rice.
         Popular noodle soups include their Beef Noodle Soup and Shanghai Noodle Soup.</string>
 
     <!-- Sweets -->
     <string name="sweets1_name">The Sweet Life</string>
-    <string name="sweets1_address">63 Hester St, New York, NY 10002</string>
+    <string name="sweets1_address" translatable="false">63 Hester St, New York, NY 10002</string>
     <string name="sweets1_menu" translatable="false">http://www.menupages.com/restaurants/the-sweet-life/menu</string>
     <string name="sweets1_website" translatable="false">http://thesweetlifenyc.com/</string>
-    <string name="sweets1_phone_number">(212) 598-0092</string>
+    <string name="sweets1_phone_number" translatable="false">(212) 598-0092</string>
     <string name="sweets1_description">Cozy candy shop offering classic sweet treats plus nuts,
         dried fruit and house made chocolates.</string>
 
-    <string name="sweets2_name">Taiyaki NYC</string>
-    <string name="sweets2_address">119 Baxter St, New York, NY 10013</string>
+    <string name="sweets2_name" translatable="false">Taiyaki NYC</string>
+    <string name="sweets2_address" translatable="false">119 Baxter St, New York, NY 10013</string>
     <string name="sweets2_menu" translatable="false">https://www.facebook.com/pg/TaiyakiNYC/menu/</string>
     <string name="sweets2_website" translatable="false"> https://taiyakinyc.com/</string>
-    <string name="sweets2_phone_number">(212) 966-2882</string>
+    <string name="sweets2_phone_number" translatable="false">(212) 966-2882</string>
     <string name="sweets2_description">A Japanese ice cream shop serving inventive flavors
         in a fish-shaped waffle cone. </string>
 
     <string name="sweets3_name">Sweet Moment</string>
-    <string name="sweets3_address">106 Mott St, New York, NY 10013</string>
+    <string name="sweets3_address" translatable="false">106 Mott St, New York, NY 10013</string>
     <string name="sweets3_menu" translatable="false">https://www.sweetmoment.nyc/menu</string>
     <string name="sweets3_website" translatable="false">https://www.sweetmoment.nyc/</string>
-    <string name="sweets3_phone_number">(212) 226-8724</string>
+    <string name="sweets3_phone_number" translatable="false">(212) 226-8724</string>
     <string name="sweets3_description">Funky dessert cafe with creative shaved ice concoctions and
         waffles, plus craft coffee drinks and tea.</string>
 
     <string name="sweets4_name">The Original Chinatown Ice Cream Factory</string>
-    <string name="sweets4_address">65 Bayard Street, New York, NY 10013</string>
+    <string name="sweets4_address" translatable="false">65 Bayard Street, New York, NY 10013</string>
     <string name="sweets4_menu" translatable="false">http://www.chinatownicecreamfactory.com/ice-cream/</string>
     <string name="sweets4_website" translatable="false">http://www.chinatownicecreamfactory.com/</string>
-    <string name="sweets4_phone_number">(212) 608-4170</string>
+    <string name="sweets4_phone_number" translatable="false">(212) 608-4170</string>
     <string name="sweets4_description">The flavors range from familiar to exotic
         (like lychee) at this compact ice-cream shop.</string>
 
     <string name="sweets5_name">Fay Da Bakery</string>
-    <string name="sweets5_address">83 Mott St, New York, NY 10013</string>
+    <string name="sweets5_address" translatable="false">83 Mott St, New York, NY 10013</string>
     <string name="sweets5_menu" translatable="false">http://fayda.com/shop/</string>
     <string name="sweets5_website" translatable="false">http://fayda.com/</string>
-    <string name="sweets5_phone_number">(212) 791-3884</string>
+    <string name="sweets5_phone_number" translatable="false">(212) 791-3884</string>
     <string name="sweets5_description">Chinese bakery for cakes, cookies and breads
         also offering hot and cold specialty drinks.</string>
 
@@ -531,15 +531,15 @@
     <string name="train_notice">During weekends, trains may be subjected to change due to construction.</string>
     <!-- <string name="mta_weekender"><a href="http://web.mta.info/weekender.html">Check the MTA Weekender</a></string> -->
 
-    <string name="canal_street_station">Canal Street</string>
-    <string name="canal_street_trains">N, Q, R, W, J, Z, M, 4, 6</string>
+    <string name="canal_street_station" translatable="false">Canal Street</string>
+    <string name="canal_street_trains" translatable="false">N, Q, R, W, J, Z, M, 4, 6</string>
     <string name="canal_street_description">There are multiple way to get to the Canal Street subway station. It is a very large station that consists of many trains including the N, Q, R, W, J, Z, M, 4, and 6 train.</string>
 
     <string name="east_broadway_station">East Broadway</string>
-    <string name="east_broadway_trains">F</string>
+    <string name="east_broadway_trains" translatable="false">F</string>
     <string name="east_broadway_description">The only train that runs to East Broadway is the F train.</string>
 
-    <string name="grand_street_station">Grand Street</string>
-    <string name="grand_street_trains">B, D</string>
+    <string name="grand_street_station" translatable="false">Grand Street</string>
+    <string name="grand_street_trains" translatable="false">B, D</string>
     <string name="grand_street_description">During the week ends the B trains do not run. Only the D trains stop at this station.</string>
 </resources>
