--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,40 +106,40 @@
     <string name="hotel13_website_link" translatable="false">http://worldhotelnyc.com/</string>
     <string name="hotel13_phone_number" translatable="false"> (212) 226-5522   </string>
 
-    <string name="hotel14_name">Canal Loft Hotel</string>
-    <string name="hotel14_address">94 Canal St, New York, NY 10002</string>
+    <string name="hotel14_name" translatable="false">Canal Loft Hotel</string>
+    <string name="hotel14_address" translatable="false">94 Canal St, New York, NY 10002</string>
     <string name="hotel14_description">Boasting a shared lounge, Canal Loft Hotel is situated in New York in the New York State region, an 11-minute walk from Bloomingdales. Around 1.2 km from Brooklyn Bridge, the property is also 1.6 km away from Ground Zero and offers free WiFi. The property is a 20-minute walk from One World Trade Center.</string>
     <string name="hotel14_images" translatable="false">None</string>
     <string name="hotel14_website_link" translatable="false">http://canal-loft-us.book.direct/en-gb</string>
-    <string name="hotel14_phone_number"> (646) 882-0428   </string>
+    <string name="hotel14_phone_number" translatable="false"> (646) 882-0428   </string>
 
-    <string name="hotel15_name">Windsor Hotel</string>
-    <string name="hotel15_address">108 Forsyth St, New York, NY 10002</string>
+    <string name="hotel15_name" translatable="false">Windsor Hotel</string>
+    <string name="hotel15_address" translatable="false">108 Forsyth St, New York, NY 10002</string>
     <string name="hotel15_description">Windsor Hotels offer affordable and spacious rooms, each adored with modern amenities and decor. Little Italy is conveniently located within Chinatown and only a few hundred feet away from the hotel. This is also located minutes away from Wall Street, the SOHO District, and the gateway to the Statue of Liberty. In addition, convenient subway stations lead you to the glitter of Times Square, the glamour of the Theatre District, the famous Central Park, shopping at 5th Avenue, the events of Madison Square Garden, and the spirit of the Rockefeller Center. </string>
     <string name="hotel15_images" translatable="false">None</string>
     <string name="hotel15_website_link" translatable="false">http://windsorhotelnyc.com/?src=%2Findex2.html</string>
-    <string name="hotel15_phone_number"> (212) 226-3009  </string>
+    <string name="hotel15_phone_number" translatable="false"> (212) 226-3009  </string>
 
-    <string name="hotel16_name">Manhattan Bowery Lodge</string>
-    <string name="hotel16_address">81 Bowery, New York, NY 10002</string>
+    <string name="hotel16_name" translatable="false">Manhattan Bowery Lodge</string>
+    <string name="hotel16_address" translatable="false">81 Bowery, New York, NY 10002</string>
     <string name="hotel16_description">Manhattan Bowery Lodge is situated in New York, 400 metres from Little Italy and 1.3 km from Brooklyn Bridge.Manhattan Bowery Lodge features free WiFi and a 24-hour front desk. One World Trade Center is 1.5 km away, while Ground Zero is 1.6 km from the property. The nearest airport is LaGuardia Airport, 12 km from the property.</string>
     <string name="hotel16_images" translatable="false">None</string>
     <string name="hotel16_website_link" translatable="false">http://manhattanbowerylodgeny.us/</string>
-    <string name="hotel16_phone_number"> (917) 353-5617 </string>
+    <string name="hotel16_phone_number" translatable="false"> (917) 353-5617 </string>
 
-    <string name="hotel17_name">Bowery Grand Hotel</string>
-    <string name="hotel17_address">143 Bowery, New York, NY 10002</string>
+    <string name="hotel17_name" translatable="false">Bowery Grand Hotel</string>
+    <string name="hotel17_address" translatable="false">143 Bowery, New York, NY 10002</string>
     <string name="hotel17_description">Bowery Grand Hotel provides you with clean room and basic amenities and you decide for yourself where to spend the rest of cash that you saved on fancy hotel. Minutes away from Little Italy, downtown shopping and right around the corner from Williamsburg Bridge. The rest of NYC is at your disposal just few train stops away, two of which by the way we got so close to our hotel so you have to work harder on your mouse scroll to make them apart from us at Google Maps.</string>
     <string name="hotel17_images" translatable="false">None</string>
     <string name="hotel17_website_link" translatable="false">http://bowerygrandhotel.com/</string>
-    <string name="hotel17_phone_number">  (212) 226-6655  </string>
+    <string name="hotel17_phone_number" translatable="false">  (212) 226-6655  </string>
 
-    <string name="hotel18_name">Comfort Inn Lower East Side</string>
-    <string name="hotel18_address">154 Madison St, New York, NY 10002</string>
+    <string name="hotel18_name" translatable="false">Comfort Inn Lower East Side</string>
+    <string name="hotel18_address" translatable="false">154 Madison St, New York, NY 10002</string>
     <string name="hotel18_description">The Comfort Inn Lower East Side is perfectly located in the heart of Manhattan and is one of the newly built hotels in the area. The subway station is only a short block away, putting guests within walking distance from downtown, Wall Street and popular New York City hotspots like South Street Seaport, The World Trade Center, Little Italy and the Brooklyn Bridge Park and much more!</string>
     <string name="hotel18_images" translatable="false">None</string>
     <string name="hotel18_website_link" translatable="false"> http://www.comfortinnles.com/ </string>
-    <string name="hotel18_phone_number"> (212) 390-1533   </string>
+    <string name="hotel18_phone_number" translatable="false"> (212) 390-1533   </string>
 
     <!-- Activities -->
 
@@ -147,27 +147,27 @@
     <string name="activity1_static">devoted to presenting and preserving
     the history, heritage, and culture of Chinese immigrants in the US</string>
     <string name="activity1_type">museum</string>
-    <string name="activity1_address">215 Centre Street</string>
+    <string name="activity1_address" translatable="false">215 Centre Street</string>
     <string name="activity1_website" translatable="false">mocanyc.org</string>
-    <string name="activity1_phone_number">212-619-4785</string>
+    <string name="activity1_phone_number" translatable="false">212-619-4785</string>
 
     <string name="activity2_name">Mayahana Temple Buddhist Association</string>
     <string name="activity2_static">NYC\'s largest Buddhist temple; provides services such as
     formal ceremonies on weekends, fortune telling, weddings,
     and areas for friends and families of the deceased to pay their respects</string>
     <string name="activity2_type">religious institution</string>
-    <string name="activity2_address">133 Canal Street</string>
+    <string name="activity2_address" translatable="false">133 Canal Street</string>
     <string name="activity2_website" translatable="false">mahayana.us</string>
-    <string name="activity2_phone_number">212-925-8787</string>
+    <string name="activity2_phone_number" translatable="false">212-925-8787</string>
 
     <string name="activity3_name" translatable="false">Aji Ichiban</string>
     <string name="activity3_static">an Asian snack paradise for those wishing to satisfy their sweet
     tooth; sells a variety of dried foods, exotic hard-to-find savory treats, and nostalgic Western treats</string>
     <string name="activity3_type">confectionary shop</string>
-    <string name="activity3_address">37 Mott Street</string>
-    <string name="activity3_phone_number">212-233-7650</string>
+    <string name="activity3_address" translatable="false">37 Mott Street</string>
+    <string name="activity3_phone_number" translatable="false">212-233-7650</string>
 
-    <string name="activity4_name">Canal Street</string>
+    <string name="activity4_name" translatable="false">Canal Street</string>
     <string name="activity4_static">a shopping experience with an open-air bazaar feel,
     complete with vendors willing to bargain </string>
     <string name="activity4_type">shopping</string>
@@ -176,39 +176,39 @@
     <string name="activity5_static">a bar inspired by European apothecaries and resembles
     a chemistry lab; offers over 250 cocktails, referred to as "prescriptions"</string>
     <string name="activity5_type">bar</string>
-    <string name="activity5_address">9 Doyers Street</string>
+    <string name="activity5_address" translatable="false">9 Doyers Street</string>
     <string name="activity5_website" translatable="false">apothekenyc.com</string>
-    <string name="activity5_phone_number">212-406-0400</string>
+    <string name="activity5_phone_number" translatable="false">212-406-0400</string>
 
     <string name="activity6_name">Columbus Park</string>
     <string name="activity6_static">at the heart of Chinatown; has a basketball court,
     playground, Astroturf field; The north is an area for mah-jongg and card players</string>
     <string name="activity6_type">park</string>
-    <string name="activity6_address">66 Mulberry Street</string>
+    <string name="activity6_address" translatable="false">66 Mulberry Street</string>
     <string name="activity6_website" translatable="false">nycgovparks.org/parks/columbus-park-m015/</string>
-    <string name="activity6_phone_number">212-406-0400</string>
+    <string name="activity6_phone_number" translatable="false">212-406-0400</string>
 
     <string name="activity7_name">Chinese Consolidated Benevolent Association</string>
     <string name="activity7_static">founded to serve and protect the interests of the Chinese people in
     the New York metropolitan area; provides social services, language classes and cultural preservation activities</string>
     <string name="activity7_type">community center</string>
-    <string name="activity7_address">62 Mott Street</string>
+    <string name="activity7_address" translatable="false">62 Mott Street</string>
     <string name="activity7_website" translatable="false">ccbanyc.org</string>
-    <string name="activity7_phone_number">212-226-6280</string>
+    <string name="activity7_phone_number" translatable="false">212-226-6280</string>
 
     <string name="activity8_name">Magic Jewelry</string>
     <string name="activity8_static">an occult shop which specializes in feng shui,
     crystals, and horoscopes; the only place in the city that photographs and reads auras</string>
     <string name="activity8_type">shopping</string>
-    <string name="activity8_address">238 Canal Street</string>
-    <string name="activity8_phone_number">212-343-0663</string>
+    <string name="activity8_address" translatable="false">238 Canal Street</string>
+    <string name="activity8_phone_number" translatable="false">212-343-0663</string>
 
     <string name="activity9_name" translatable="false">Mmuseumm</string>
     <string name="activity9_static">a modern natural history museum located in a
     freight elevator; collection of unique artifacts</string>
-    <string name="activity9_address">4 Cortlandt Alley</string>
+    <string name="activity9_address" translatable="false">4 Cortlandt Alley</string>
     <string name="activity9_website" translatable="false">mmuseumm.com</string>
-    <string name="activity9_phone_number">888-763-8839</string>
+    <string name="activity9_phone_number" translatable="false">888-763-8839</string>
 
     <string name="activity10_name">Up Stairs</string>
     <string name="activity10_static">located on the second floor of an apartment building;
