--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -135,4 +135,19 @@
     <string name="Historical_sight2_name">Museo de los chinos en América</string>
     <string name="Historical_sight4_name">Los cinco puntos: punto 2</string>
     <string name="Historical_sight5_name">Edificio Jarmulowski</string>
+    <string name="Historical_sight6_name">Casa de Edward Moore</string>
+    <string name="Historical_sight7_name">Sinagoga de Pike Street</string>
+    <string name="Historical_sight8_name">Parque de Columbus</string>
+    <string name="Historical_sight9_name">Sopa de Chinatown</string>
+    <string name="restaurant1_name">Shanghai Asian Manor</string>
+    <string name="restaurant2_name">Nom Wah Tea Parlor</string>
+    <string name="restaurant3_name">Great NY Noodletown</string>
+    <string name="restaurant5_name">Fideos Sabrosos Tirados</string>
+    <string name="fast_food2_name">Wah Fung *1 Comida Rápida</string>
+    <string name="fast_food3_name">Hua Ji Comida Rápida de Chuleta de Cerdo</string>
+    <string name="fast_food5_name">Comida Rápida de May Wah</string>
+    <string name="sweets1_name">La Vida Dulce</string>
+    <string name="sweets3_name">Momento Dulce</string>
+    <string name="sweets4_name">La Fábrica de Helado de Barrio chino Original</string>
+    <string name="sweets5_name">Fay Da Bakery</string>
 </resources>
